--- a/css/Style.css
+++ b/css/Style.css
@@ -4,6 +4,6 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  /* font-family: "Open Sans", sans-serif; */
-  font-family: "Roboto", sans-serif;
+  font-family: "Open Sans", sans-serif;
+  /* font-family: "Roboto", sans-serif; */
 }
