--- a/css/navbar.css
+++ b/css/navbar.css
@@ -13,6 +13,7 @@
   background-color: var(--navColor);
 
   position: fixed;
+  z-index: 1111;
 }
 
 /* ========================== Left =========================== */
@@ -65,7 +66,7 @@
 }
 .center-conatainer > div :hover {
   color: var(--font-hover-color);
-   cursor: pointer;
+  
 }
 .center-conatainer > div > input {
   width: 500px;
