--- a/css/video.css
+++ b/css/video.css
@@ -1,4 +1,4 @@
-.mainVideo-container {
+/* .mainVideo-container {
   width: 100%;
   height: 100vh;
   display: grid;
@@ -13,4 +13,83 @@
   height: 150px;
   background-color: blueviolet;
   border-radius: 10px;
+}
+ */
+
+.content {
+  width: 100%;
+
+  position: absolute;
+  top: 60px;
+  display: flex;
+}
+.content > .sideBar {
+  width: 5%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 20px;
+  font-size: 2em;
+  margin-top: 10px;
+}
+
+.content > .video {
+  width: 95%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+
+  grid-gap: 20px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.content > .video > div {
+  width: 320px;
+  height: 250px;
+  background-color: #efefef;
+  border-radius: 10px;
+}
+
+.video-sub div {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.video-sub div #main-video {
+  width: 100%;
+  height: 180px;
+  border-radius: 10px 10px 0 0;
+}
+#video-description {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
+}
+#video-description img {
+  width: 3em;
+  height: 3em;
+  border-radius: 100%;
+  margin-left: 10px;
+}
+#video-description div{
+  font-size: 10px;
+  font-weight: bold;
+  text-transform: capitalize;
+}
+
+.name, span{
+  font-weight: lighter;
+  text-indent: 1px;
+ 
 }
