--- a/css/video.css
+++ b/css/video.css
@@ -1,21 +1,3 @@
-/* .mainVideo-container {
-  width: 100%;
-  height: 100vh;
-  display: grid;
-  grid-template-columns: 300px 300px 300px 300px ;
-  column-gap: 20px;
-  justify-content: center;
-  align-items: center;
-}
-
-.mainVideo-container > div {
-  width: 290px;
-  height: 150px;
-  background-color: blueviolet;
-  border-radius: 10px;
-}
- */
-
 .content {
   width: 100%;
 
@@ -82,14 +64,14 @@
   border-radius: 100%;
   margin-left: 10px;
 }
-#video-description div{
+#video-description div {
   font-size: 10px;
   font-weight: bold;
   text-transform: capitalize;
 }
 
-.name, span{
+.name,
+span {
   font-weight: lighter;
   text-indent: 1px;
- 
 }
